remove unused comments

--- a/WET stats notebook.ipynb
+++ b/WET stats notebook.ipynb
@@ -598,9 +598,7 @@
    ],
    "source": [
     "f = plt.figure(figsize=(15, 8))\n",
-    "# print(df.dtypes)\n",
-    "sns.heatmap(pd_hmdf, annot=True, linewidth=0.1, norm=LogNorm(), fmt='g');\n",
-    "# plt.setp(f.axes[0].xaxis.get_majorticklabels(), rotation=35, ha='right');"
+    "sns.heatmap(pd_hmdf, annot=True, linewidth=0.1, norm=LogNorm(), fmt='g');"
    ]
   },
   {
